fited style bug where PG_h2 was not left align in desktop mode

--- a/css/style.css
+++ b/css/style.css
@@ -665,10 +665,6 @@
         padding-top: 20px;
     }
     
-    #PG_h2 {
-        text-align: center;
-    }
-    
     #intro,
     #projects,
     #about,
@@ -680,7 +676,8 @@
     #debug_text,
     #learn_text,
     #people_text,
-    #design_text {
+    #design_text,
+    #PG_h2 {
         text-align: center;
     }
     
@@ -896,7 +893,8 @@
         #research_text,
         #debug_text,
         #learn_text,
-        #people_text {
+        #people_text,
+        #PG_h2 {
             grid-column: 3 / span 1;
             text-align: left;
             padding-top: 100px;
@@ -1159,6 +1157,7 @@
             grid-column: 2 / span 1;
         }
         #PG_text,
+        #PG_h2,
         #engin_text,
         #web_text,
         #ux_text,
